[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainMenuFolder/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.107
margin_top = -28.3482
margin_right = -204.107
margin_bottom = -28.3482
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 434.673
margin_top = 83.1548
margin_right = 472.673
margin_bottom = 103.155
text = "Play"
script = ExtResource( 1 )

[node name="Credits" type="Button" parent="."]
margin_left = 425.223
margin_top = 113.393
margin_right = 482.223
margin_bottom = 133.393
text = "Credits"

[node name="Controls" type="Button" parent="."]
margin_left = 421.444
margin_top = 143.001
margin_right = 486.444
margin_bottom = 163.001
text = "Controls"

[node name="Quit" type="Button" parent="."]
margin_left = 431.523
margin_top = 179.539
margin_right = 471.523
margin_bottom = 199.539
text = "Quit"

[connection signal="pressed" from="Play" to="Play" method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="Play" method="_on_Credits_pressed"]
[connection signal="pressed" from="Controls" to="Play" method="_on_Controls_pressed"]
[connection signal="pressed" from="Quit" to="Play" method="_on_Quit_pressed"]
